--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,24 @@
-[tool.poetry]
+[project]
 name = "pydantic-partial"
 version = "0.7.0"
 description = "Create partial models from your pydantic models. Partial models may allow None for certain or all fields."
-authors = ["TEAM23 GmbH <info@team23.de>"]
-license = "MIT"
-repository = "https://github.com/team23/pydantic-partial"
+authors = [{ name = "TEAM23 GmbH", email = "info@team23.de" }]
+requires-python = "~=3.9"
 readme = "README.md"
+license = "MIT"
+dependencies = ["pydantic>=1.9.0,<3.0.0"]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-pydantic = ">=1.9.0,<3.0.0"
+[project.urls]
+Repository = "https://github.com/team23/pydantic-partial"
 
-[tool.poetry.group.dev.dependencies]
-pytest = ">=7.1.2,<9.0.0"
-pytest-cov = ">=3,<7"
-tox = ">=3.26,<5.0"
-ruff = ">=0.5.0,<0.12.0"
-pyright = ">=1.1.350,<1.2"
+[dependency-groups]
+dev = [
+    "pytest>=7.1.2,<9.0.0",
+    "pytest-cov>=3,<7",
+    "tox>=3.26,<5.0",
+    "ruff>=0.5.0,<0.12.0",
+    "pyright>=1.1.350,<1.2",
+]
 
 [tool.ruff]
 line-length = 115
@@ -33,5 +35,5 @@ ignore = ["A001","A002","A003","ANN401","C901","N8","B008","F405","F821"]
 "test_*.py" = ["S101","ANN","F401"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
